fix alignment

--- a/src/styles/mesca2.css
+++ b/src/styles/mesca2.css
@@ -379,6 +379,7 @@ button:focus-visible, a:focus-visible, .button:focus-visible{
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  text-align: left;
 }
 
 @media only screen and (min-width: 768px) {
@@ -388,6 +389,7 @@ button:focus-visible, a:focus-visible, .button:focus-visible{
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    text-align: center;
   }
 }
 
